[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sourpuss"
dynamic = ["version"]
description = "Like feeding pickles to a cat(1)"
license = "MPL-2.0"
license-files = ["LICENSE"]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.7"
authors = [
  {name = "Rhys Ulerich", email = "rhys.ulerich@gmail.com"},
]
maintainers = [
  {name = "Rhys Ulerich", email = "rhys.ulerich@gmail.com"},
]
keywords = [
  "cat",
  "pandas",
  "pickle"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Text Processing :: General",
  "Topic :: Utilities",
]
dependencies = [
  "click",
  "pandas",
]
optional-dependencies = {tests = ["pytest"]}

[project.scripts]
sourpuss = "sourpuss:main"

[project.urls]
Homepage = "https://github.com/RhysU/sourpuss"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
